--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-25.05 Зібрав на breadboard
+*Зібрав на breadboard
 *зроблена частина розрахунків
 *розрахунки закінчені
+*докуплені елементи і модернізована схема
